Fixed scrollbars

--- a/client/my-sites/plugins/marketplace/marketplace-domain-upsell/style.scss
+++ b/client/my-sites/plugins/marketplace/marketplace-domain-upsell/style.scss
@@ -71,6 +71,11 @@
 		width: 100%;
 		justify-content: space-around;
 		overflow-y: scroll;
+		-ms-overflow-style: none !important;
+		scrollbar-width: none !important;
+		&::-webkit-scrollbar {
+			display: none !important;
+		}
 		max-height: calc( 100vh - 95px );
 
 		.domain-picker {
@@ -81,12 +86,11 @@
 
 		@media ( max-width: 782px ) {
 			padding: 30px 0 0;
-			overflow: scroll;
-			-ms-overflow-style: none;
-			scrollbar-width: none;
-
+			overflow-y: scroll;
+			-ms-overflow-style: none !important;
+			scrollbar-width: none !important;
 			&::-webkit-scrollbar {
-				display: none;
+				display: none !important;
 			}
 		}
 	}
